WIP fix(button): Suppress whitespace between icon and text label

--- a/packages/mdc-button/_mixins.scss
+++ b/packages/mdc-button/_mixins.scss
@@ -89,7 +89,7 @@
   @include mdc-ripple-surface;
   @include mdc-ripple-radius-bounded;
 
-  display: inline-block;
+  display: inline-flex;
   position: relative;
   box-sizing: border-box;
   min-width: 64px;
@@ -140,9 +140,8 @@
 @mixin mdc-button__icon-svg_ {
   @include mdc-rtl-reflexive-box(margin, right, 8px);
 
-  margin-top: -2px;
   fill: currentColor;
-  vertical-align: middle;
+  align-self: center;
 }
 
 @mixin mdc-button--stroked_() {
